[package]
name = "telemetrylib"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Valkey GLIDE Maintainers"]

[dependencies]
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "time"] }
thiserror = "1"
url = "2"
async-trait = "0.1"
serial_test = "2" 

opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27.x", features = ["rt-tokio", "metrics", "rt-tokio-current-thread"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client", "metrics", "tonic"] }
once_cell = "1.18"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time"] }
