[package]
name = "telemetrylib"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Valkey GLIDE Maintainers"]

[dependencies]
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "time"] }

thiserror = "2"
url = "2"
async-trait = "0.1"
logger_core = { path = "../../logger_core" }
opentelemetry = { version = "0.30", features = ["metrics"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.30", features = ["http-proto", "reqwest-client", "grpc-tonic"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time"] }
