[package]
name = "valkey-glide"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Valkey GLIDE Maintainers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
redis = { path = "../../glide-core/redis-rs/redis", features = ["aio", "tokio-comp", "tokio-rustls-comp"] }
glide-core = { path = "../../glide-core", features = ["socket-layer"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
logger_core = { path = "../../logger_core" }
byteorder = "1"
bytes = "1"
num-traits = "0.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["disable_initial_exec_tls"] }
num-bigint = { version = "0.4", optional = true }

[build-dependencies]
napi-build = "2"


[profile.release]
opt-level = 3         # Optimize for performance
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
panic = "abort"       # Use 'abort' instead of 'unwind' for panic handling
strip = "symbols"     # Remove symbol

[features]
testing_utilities = ["num-bigint"]
