[package]
name = "valkey-glide"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Valkey GLIDE Maintainers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
redis = { path = "../../glide-core/redis-rs/redis", features = ["aio", "tokio-comp", "tokio-rustls-comp"] }
glide-core = { path = "../../glide-core", features = ["proto"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
napi = { version = "3.5", default-features = false, features = ["napi8"] }
napi-derive = "3.5"
logger_core = { path = "../../logger_core" }
byteorder = "1"
bytes = "1"
num-traits = "0.2"
num_cpus = "1.16"
parking_lot = "0.12"
protobuf = { version = "3", features = ["bytes", "with-bytes"] }
num-bigint = { version = "0.4", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["disable_initial_exec_tls"] }

[build-dependencies]
napi-build = "2"


[profile.release]
opt-level = 3         # Optimize for performance
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
panic = "abort"       # Use 'abort' instead of 'unwind' for panic handling
strip = "symbols"     # Remove symbol

[features]
testing_utilities = ["num-bigint"]
