[package]
name = "valkey-glide"
edition = "2024"
license = "Apache-2.0"
authors = ["Valkey GLIDE Maintainers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "glide"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "^0.25", features = ["extension-module", "num-bigint"] }
bytes = { version = "^1.8" }
redis = { path = "../../glide-core/redis-rs/redis", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
    "tokio-rustls-comp",
] }
glide-core = { path = "../../glide-core", features = ["socket-layer"] }
logger_core = { path = "../../logger_core" }

[profile.release]
lto = true
strip = "symbols"

[features]
mock-pubsub = ["glide-core/mock-pubsub"]
