[package]
name = "redis"
version = "0.25.2"
keywords = ["redis", "database"]
description = "Redis driver for Rust."
homepage = "https://github.com/redis-rs/redis-rs"
repository = "https://github.com/redis-rs/redis-rs"
documentation = "https://docs.rs/redis"
license = "BSD-3-Clause"
edition = "2021"
rust-version = "1.67"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
bench = false

[dependencies]
# These two are generally really common simple dependencies so it does not seem
# much of a point to optimize these, but these could in theory be removed for
# an indirection through std::Formatter.
ryu = "1"
itoa = "1"

# Strum is a set of macros and traits for working with enums and strings easier in Rust.
strum = "0.27"
strum_macros = "0.27"

# This is a dependency that already exists in url
percent-encoding = "2"

# We need this for redis url parsing
url = "2"

combine = { version = "4", default-features = false, features = ["std"] }

# Only needed for AIO
bytes = { version = "1", optional = true }
futures-util = { version = "0.3", default-features = false, optional = true }
pin-project-lite = { version = "0.2", optional = true }
tokio-util = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt", "net", "time", "sync"] }
socket2 = { version = "0.5", features = ["all"], optional = true }
dispose = { version = "0.5", optional = true }

# Only needed for the connection manager
arc-swap = { version = "1.7" }
futures = { version = "0.3", optional = true }

# Only needed for the r2d2 feature
r2d2 = { version = "0.8", optional = true }

# Only needed for cluster
crc16 = { version = "0.4", optional = true }
rand = { version = "0.9", optional = true }

# Only needed for async cluster
dashmap = { version = "6", optional = true }

async-trait = { version = "0.1", optional = true }

# Only needed for tokio support
tokio-retry2 = { version = "0.5", features = ["jitter"], optional = true }

# Only needed for native tls
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }

# Only needed for rustls
rustls = { version = "0.23", features = ["ring"], default-features = false, optional = true }

rustls-native-certs = { version = "0.8", optional = true }
tokio-rustls = { version = "0.26", default-features = false, optional = true }
rustls-pemfile = { version = "2", optional = true }
rustls-pki-types = { version = "1", optional = true }

# Only needed for RedisJSON Support
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

# Only needed for bignum Support
rust_decimal = { version = "1", optional = true }
bigdecimal = { version = "0.4", optional = true }
num-bigint = "0.4"

# Optional aHash support
ahash = { version = "0.8", optional = true }

tracing = "0.1"

# Optional uuid support
uuid = { version = "1.6", optional = true }

telemetrylib = { path = "../../telemetry" }

lazy_static = "1"

[features]
default = [
    "aio",
    "keep-alive",
    "tokio-comp",
    "tokio-rustls-comp",
    "connection-manager",
    "cluster",
    "cluster-async",
]
aio = [
    "bytes",
    "pin-project-lite",
    "futures-util",
    "futures-util/alloc",
    "futures-util/sink",
    "tokio/io-util",
    "tokio-util",
    "tokio-util/codec",
    "combine/tokio",
    "async-trait",
    "dispose",
]
json = ["serde", "serde/derive", "serde_json"]
cluster = ["crc16", "rand"]
tls-native-tls = ["native-tls"]
tls-rustls = [
    "rustls",
    "rustls-native-certs",
    "rustls-pemfile",
    "rustls-pki-types",
]
tls-rustls-insecure = ["tls-rustls"]

tokio-comp = ["aio", "tokio/net", "tokio-retry2"]
tokio-native-tls-comp = ["tokio-comp", "tls-native-tls", "tokio-native-tls"]
tokio-rustls-comp = ["tokio-comp", "tls-rustls", "tokio-rustls"]
connection-manager = ["futures", "aio", "tokio-retry2"]
streams = []
cluster-async = ["cluster", "futures", "futures-util", "dashmap"]
keep-alive = ["socket2"]
sentinel = ["rand"]
tcp_nodelay = []
rust_decimal = ["dep:rust_decimal"]
bigdecimal = ["dep:bigdecimal"]
num-bigint = []
uuid = ["dep:uuid"]
disable-client-setinfo = []

# Deprecated features
tls = ["tls-native-tls"] # use "tls-native-tls" instead

[dev-dependencies]
rand = "0.9"
socket2 = "0.5"
assert_approx_eq = "1"
fnv = "1"
futures = "0.3"
futures-time = "3"
criterion = "0.6"
partial-io = { version = "0.5", features = ["tokio", "quickcheck1"] }
quickcheck = "1"
tokio = { version = "1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "time",
] }
tempfile = "3"
once_cell = "1"
anyhow = "1"
sscanf = "0.4"
serial_test = "3"
versions = "7"
which = "7"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[[test]]
name = "test_async"
required-features = ["tokio-comp"]

[[test]]
name = "parser"
required-features = ["aio"]

[[test]]
name = "test_module_json"
required-features = ["json", "serde/derive"]

[[test]]
name = "test_cluster_async"
required-features = ["cluster-async", "tokio-comp"]

[[test]]
name = "test_async_cluster_connections_logic"
required-features = ["cluster-async"]

[[test]]
name = "test_bignum"

[[bench]]
name = "bench_basic"
harness = false
required-features = ["tokio-comp"]

[[bench]]
name = "bench_cluster"
harness = false
required-features = ["cluster"]

[[bench]]
name = "bench_cluster_async"
harness = false
required-features = ["cluster-async", "tokio-comp"]

[[example]]
name = "async-multiplexed"
required-features = ["tokio-comp"]

[[example]]
name = "async-await"
required-features = ["aio"]

[[example]]
name = "async-pub-sub"
required-features = ["aio"]

[[example]]
name = "async-scan"
required-features = ["aio"]

[[example]]
name = "async-connection-loss"
required-features = ["connection-manager"]

[[example]]
name = "streams"
required-features = ["streams"]

[package.metadata.cargo-machete]
ignored = ["strum"]
