[package]
name = "redis"
version = "0.25.2"
keywords = ["redis", "database"]
description = "Redis driver for Rust."
homepage = "https://github.com/redis-rs/redis-rs"
repository = "https://github.com/redis-rs/redis-rs"
documentation = "https://docs.rs/redis"
license = "BSD-3-Clause"
edition = "2021"
rust-version = "1.71"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
bench = false

[dependencies]
# These two are generally really common simple dependencies so it does not seem
# much of a point to optimize these, but these could in theory be removed for
# an indirection through std::Formatter.
ryu = "1"
itoa = "1"

# Strum is a set of macros and traits for working with enums and strings easier in Rust.
strum = "0.27"
strum_macros = "0.27"

# This is a dependency that already exists in url
percent-encoding = "2"

# We need this for redis url parsing
url = "2"

combine = { version = "4", default-features = false, features = ["std"] }

# Only needed for AIO
bytes = { version = "1", optional = true }
futures-util = { version = "0.3", default-features = false, optional = true }
pin-project-lite = { version = "0.2", optional = true }
tokio-util = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt", "net", "time", "sync"] }
socket2 = { version = "0.6", features = ["all"], optional = true }
dispose = { version = "0.5", optional = true }

# Only needed for the connection manager
arc-swap = { version = "1.7" }
futures = { version = "0.3", optional = true }

# Only needed for cluster
crc16 = { version = "0.4", optional = true }
rand = { version = "0.9", optional = true }

# Only needed for async cluster
dashmap = { version = "6", optional = true }

async-trait = { version = "0.1", optional = true }

# Only needed for tokio support
tokio-retry2 = { version = "0.5", features = ["jitter"], optional = true }

# Only needed for rustls (default TLS implementation)
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-platform-verifier = { version = "0.6", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
rustls-pemfile = { version = "2" }
rustls-pki-types = { version = "1" }

# Only needed for bignum Support
num-bigint = "0.4"

tracing = "0.1"

telemetrylib = { path = "../../telemetry" }

logger_core = { path = "../../../logger_core" }

lazy_static = "1"

[features]
default = [
    "aio",
    "keep-alive",
    "tokio-comp",
    "tokio-rustls-comp",
    "connection-manager",
    "cluster",
    "cluster-async",
    "tls-rustls-insecure",
]
aio = [
    "bytes",
    "pin-project-lite",
    "futures-util",
    "futures-util/alloc",
    "futures-util/sink",
    "tokio/io-util",
    "tokio-util",
    "tokio-util/codec",
    "combine/tokio",
    "async-trait",
    "dispose",
]
cluster = ["crc16", "rand"]
tls-rustls-insecure = []
tokio-comp = ["aio", "tokio/net", "tokio-retry2"]
tokio-rustls-comp = ["tokio-comp"]
connection-manager = ["futures", "aio", "tokio-retry2"]
cluster-async = ["cluster", "futures", "futures-util", "dashmap"]
keep-alive = ["socket2"]
sentinel = ["rand"]

[dev-dependencies]
rand = "0.9"
socket2 = "0.6"
fnv = "1"
futures = "0.3"
futures-time = "3"
criterion = "0.6"
partial-io = { version = "0.5", features = ["tokio", "quickcheck1"] }
quickcheck = "1"
tokio = { version = "1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "time",
] }
tempfile = "3"
once_cell = "1"
anyhow = "1"
serial_test = "3"
versions = "7"
which = "8"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde_json = { version = "1" }

[[test]]
name = "test_async"
required-features = ["tokio-comp"]

[[test]]
name = "parser"
required-features = ["aio"]

[[test]]
name = "test_cluster_async"
required-features = ["cluster-async", "tokio-comp"]

[[test]]
name = "test_async_cluster_connections_logic"
required-features = ["cluster-async"]

[[bench]]
name = "bench_basic"
harness = false
required-features = ["tokio-comp"]

[[bench]]
name = "bench_cluster"
harness = false
required-features = ["cluster"]

[[bench]]
name = "bench_cluster_async"
harness = false
required-features = ["cluster-async", "tokio-comp"]

[[example]]
name = "async-multiplexed"
required-features = ["tokio-comp"]

[[example]]
name = "async-await"
required-features = ["aio"]

[[example]]
name = "async-pub-sub"
required-features = ["aio"]

[[example]]
name = "async-scan"
required-features = ["aio"]

[package.metadata.cargo-machete]
ignored = ["strum"]
