[build-system]
requires = ["maturin==0.14.17"]
build-backend = "maturin"

[project]
name = "test-valkey-glide-async"
description = "An open source Valkey client library that supports Valkey and Redis open source 6.2, 7.0, 7.2 and 8.0."
requires-python = ">=3.9"
dependencies = [
    # Note: If you add a dependency here, make sure to also add it to requirements.txt
    # Once issue https://github.com/aboutcode-org/python-inspector/issues/197 is resolved, the requirements.txt file can be removed.
    "async-timeout>=4.0.2; python_version < '3.11'",
    "typing-extensions>=4.8.0; python_version < '3.11'",
    "protobuf>=6.20",
]
version = "0.1.0"

classifiers = [
    "Topic :: Database",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "../.."
include = ["glide/shared/**/*.py"]
exclude = [
    "glide/shared/commands/sync_commands/**/*",
]
